--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <link rel="icon" href="/src/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Realsee Dnalogel Showcase</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <h1>示例</h1>
+    <ul>
+      <li><a href="/src/0.ModelViewPlugin/">ModelViewPlugin：模型展示插件</a></li>
+      <li><a href="/src/1.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景模态选点插件</a></li>
+    </ul>
   </body>
 </html>
