feat: support floorplan plugin write by svelte

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="/src/0.ModelViewPlugin/">ModelViewPlugin：模型展示插件</a></li>
       <li><a href="/src/1.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景模态选点插件</a></li>
+      <li><a href="/src/2.ModelRoomLabelPlugin/">ModelRoomLabelPlugin：</a></li>
     </ul>
   </body>
 </html>
