--- a/src/2.ModelRoomLabelPlugin/index.html
+++ b/src/2.ModelRoomLabelPlugin/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <link rel="stylesheet" href="../../node_modules/@realsee/dnalogel/dist/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PanoCursorRaycasterPlugin</title>
+  <title>ModelRoomLabelPlugin</title>
   <style>
     * { margin: 0; padding: 0; }
     html, body #app { width: 100%; height: 100%; overflow: hidden; }
