feat: floorplan plugin

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>示例</h1>
     <ul>
       <li><a href="/src/0.ModelViewPlugin/">ModelViewPlugin：模型展示插件</a></li>
-      <li><a href="/src/1.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景模态选点插件</a></li>
-      <li><a href="/src/2.ModelRoomLabelPlugin/">ModelRoomLabelPlugin：</a></li>
+      <li><a href="/src/1.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>
+      <li><a href="/src/2.ModelRoomLabelPlugin/">ModelRoomLabelPlugin：模型态房屋标签插件</a></li>
     </ul>
   </body>
 </html>
