--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="/src/0.ModelViewPlugin/">ModelViewPlugin：模型展示插件</a></li>
       <li><a href="/src/1.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>
       <li><a href="/src/2.ModelRoomLabelPlugin/">ModelRoomLabelPlugin：模型态房屋标签插件</a></li>
+      <li><a href="/src/3.TopviewFloorplanPlugin/">TopviewFloorplanPlugin：俯视模型户型图插件</a></li>
     </ul>
   </body>
 </html>
