--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <ul>
       <li><a href="/src/0.ModelViewPlugin/">ModelViewPlugin：模型展示插件</a></li>
       <li><a href="/src/1.PanoFloorplanRadarPlugin/">PanoFloorplanRadarPlugin：全景户型雷达图插件</a></li>
-<!--      <li><a href="/src/1.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
       <li><a href="/src/2.ModelRoomLabelPlugin/">ModelRoomLabelPlugin：模型态房屋标签插件</a></li>
       <li><a href="/src/3.TopviewFloorplanPlugin/">TopviewFloorplanPlugin：俯视模型户型图插件</a></li>
       <li><a href="/src/4.ModelChassisCompassPlugin/">ModelChassisCompassPlugin：模型底盘指南针插件</a></li>
       <li><a href="/src/5.ModelEntryDoorGuidePlugin/">ModelEntryDoorGuidePlugin：模型入户门引导插件</a></li>
+      <li><a href="/src/6.CSS3DRenderPlugin/">CSS3DRenderPlugin：CSS3D渲染插件</a></li>
+      <li><a href="/src/7.CameraMovementPlugin/">CameraMovementPlugin：相机运镜插件</a></li>
+<!--      <li><a href="/src/7.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
     </ul>
   </body>
 </html>
