--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>示例</h1>
     <ul>
-      <li><a href="/src/0.ModelViewPlugin/">ModelViewPlugin：模型展示插件</a></li>
+      <li><a href="/src/0.ModelViewPlugin/">ModelViewPlugin：模型小窗插件</a></li>
       <li><a href="/src/1.PanoFloorplanRadarPlugin/">PanoFloorplanRadarPlugin：全景户型雷达图插件</a></li>
       <li><a href="/src/2.ModelRoomLabelPlugin/">ModelRoomLabelPlugin：模型态房屋标签插件</a></li>
       <li><a href="/src/3.TopviewFloorplanPlugin/">TopviewFloorplanPlugin：俯视模型户型图插件</a></li>
@@ -17,7 +17,8 @@
       <li><a href="/src/5.ModelEntryDoorGuidePlugin/">ModelEntryDoorGuidePlugin：模型入户门引导插件</a></li>
       <li><a href="/src/6.CSS3DRenderPlugin/">CSS3DRenderPlugin：CSS3D渲染插件</a></li>
       <li><a href="/src/7.CameraMovementPlugin/">CameraMovementPlugin：相机运镜插件</a></li>
-<!--      <li><a href="/src/7.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
+      <li><a href="/src/8.ModelFloorplanPlugin/">ModelFloorplanPlugin：模型户型图插件</a></li>
+      <!--      <li><a href="/src/8.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
     </ul>
   </body>
 </html>
