--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="/src/6.CSS3DRenderPlugin/">CSS3DRenderPlugin：CSS3D渲染插件</a></li>
       <li><a href="/src/7.CameraMovementPlugin/">CameraMovementPlugin：相机运镜插件</a></li>
       <li><a href="/src/8.ModelFloorplanPlugin/">ModelFloorplanPlugin：模型户型图插件</a></li>
+      <li><a href="/src/9.PanoCompassPlugin/">PanoCompassPlugin：全景指南针插件</a></li>
       <!--      <li><a href="/src/8.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
     </ul>
   </body>
