--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Realsee Dnalogel Showcase</title>
   </head>
   <body>
     <h1>示例</h1>
-    <ul>
-      <li><a href="/dnalogel/src/0.ModelViewPlugin/">ModelViewPlugin：模型小窗插件</a></li>
-      <li><a href="/dnalogel/src/1.PanoFloorplanRadarPlugin/">PanoFloorplanRadarPlugin：全景户型雷达图插件</a></li>
-      <li><a href="/dnalogel/src/2.ModelRoomLabelPlugin/">ModelRoomLabelPlugin：模型态房屋标签插件</a></li>
-      <li><a href="/dnalogel/src/3.TopviewFloorplanPlugin/">TopviewFloorplanPlugin：俯视模型户型图插件</a></li>
-      <li><a href="/dnalogel/src/4.ModelChassisCompassPlugin/">ModelChassisCompassPlugin：模型底盘指南针插件</a></li>
-      <li><a href="/dnalogel/src/5.ModelEntryDoorGuidePlugin/">ModelEntryDoorGuidePlugin：模型入户门引导插件</a></li>
-      <li><a href="/dnalogel/src/6.CSS3DRenderPlugin/">CSS3DRenderPlugin：CSS3D渲染插件</a></li>
-      <li><a href="/dnalogel/src/7.CameraMovementPlugin/">CameraMovementPlugin：相机运镜插件</a></li>
-      <li><a href="/dnalogel/src/8.ModelFloorplanPlugin/">ModelFloorplanPlugin：模型户型图插件</a></li>
-      <li><a href="/dnalogel/src/10.PanoRulerPlugin/">PanoRulerPlugin：全景标尺插件</a></li>
-      <li><a href="/dnalogel/src/9.PanoCompassPlugin/">PanoCompassPlugin：全景指南针插件</a></li>
-      <!--      <li><a href="/src/8.PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
-    </ul>
+    <div>
+      <div><a href="/dnalogel/src/ModelViewPlugin/index.html">ModelViewPlugin：模型小窗插件</a></div>
+      <div><a href="/dnalogel/src/PanoFloorplanRadarPlugin/index.html">PanoFloorplanRadarPlugin：全景户型雷达图插件</a></div>
+      <div><a href="/dnalogel/src/ModelRoomLabelPlugin/index.html">ModelRoomLabelPlugin：模型态房屋标签插件</a></div>
+      <div><a href="/dnalogel/src/TopviewFloorplanPlugin/index.html">TopviewFloorplanPlugin：俯视模型户型图插件</a></div>
+      <div><a href="/dnalogel/src/ModelChassisCompassPlugin/index.html">ModelChassisCompassPlugin：模型底盘指南针插件</a></div>
+      <div><a href="/dnalogel/src/ModelEntryDoorGuidePlugin/index.html">ModelEntryDoorGuidePlugin：模型入户门引导插件</a></div>
+      <div><a href="/dnalogel/src/CSS3DRenderPlugin/index.html">CSS3DRenderPlugin：CSS3D渲染插件</a></div>
+      <div><a href="/dnalogel/src/CameraMovementPlugin/index.html">CameraMovementPlugin：相机运镜插件</a></div>
+      <div><a href="/dnalogel/src/ModelFloorplanPlugin/index.html">ModelFloorplanPlugin：模型户型图插件</a></div>
+      <div><a href="/dnalogel/src/PanoRulerPlugin/index.html">PanoRulerPlugin：全景标尺插件</a></div>
+      <div><a href="/dnalogel/src/PanoCompassPlugin/index.html">PanoCompassPlugin：全景指南针插件</a></div>
+      <div><a href="/dnalogel/src/PanoMeasurePlugin/index.html">PanoMeasurePlugin：全景测量工具插件</a></div>
+      <!--      <li><a href="/src/PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
+    </div>
   </body>
 </html>
