--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="/dnalogel/src/PanoCompassPlugin/index.html">PanoCompassPlugin：全景指南针插件</a></li>
       <li><a href="/dnalogel/src/PanoMeasurePlugin/index.html">PanoMeasurePlugin：全景测量工具插件</a></li>
       <li><a href="/dnalogel/src/PanoSpatialTagPlugin/index.html">PanoSpatialTagPlugin：全景空间标签插件</a></li>
+      <li><a href="/dnalogel/src/ModelItemLabelPlugin/index.html">ModelItemLabelPlugin：模型物品标签插件</a></li>
       <!--      <li><a href="/src/PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
     </ul>
   </body>
