--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <li><a href="/dnalogel/src/PanoMeasurePlugin/index.html">PanoMeasurePlugin：全景测量工具插件</a></li>
       <li><a href="/dnalogel/src/PanoSpatialTagPlugin/index.html">PanoSpatialTagPlugin：全景空间标签插件</a></li>
       <li><a href="/dnalogel/src/ModelItemLabelPlugin/index.html">ModelItemLabelPlugin：模型物品标签插件</a></li>
-      <!--      <li><a href="/src/PanoCursorRaycasterPlugin/">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
+      <li><a href="/dnalogel/src/ModelTVVideoPlugin/index.html">ModelTVVideoPlugin：模型电视插件</a></li>
+<!--      此功能仅做工具使用，不对外支持维护 -->
+<!--      <li><a href="/dnalogel/src/PanoCursorRaycasterPlugin/index.html">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
     </ul>
   </body>
 </html>
