--- a/index.html
+++ b/index.html
@@ -80,8 +80,11 @@
     <li>
       <a href="/dnalogel/src/PanoDoorLabelPlugin/index.html">PanoDoorLabelPlugin: 分间指引组件</a>
     </li>
+    <!-- <li>
+      <a href="/dnalogel/src/Object3DHelperPlugin/index.html">Object3DHelperPlugin：模型操作插件</a>
+    </li> -->
     <!--      此功能仅做工具使用，不对外支持维护 -->
-    <!--      <li><a href="/dnalogel/src/PanoCursorRaycasterPlugin/index.html">PanoCursorRaycasterPlugin：全景态选点插件</a></li>-->
+    <!-- <li><a href="/dnalogel/src/PanoCursorRaycasterPlugin/index.html">PanoCursorRaycasterPlugin：全景态选点插件</a></li> -->
   </ul>
 </body>
 
