refactor(floor & tag & roomLabel): resizeObserver (#195)
## 2.13.2
 - refactor(floor & tag & roomLabel): 更改 dom resize 监听方式。使用 resizeObserver 代替 svelte 原生的 iframe 实现 resize 监听

--- a/src/PanoFloorplanRadarPlugin/index.html
+++ b/src/PanoFloorplanRadarPlugin/index.html
@@ -11,6 +11,8 @@
   </style>
 </head>
 <body>
+  <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script> -->
   <div id="app"></div>
   <script type="module" src="./index"></script>
 </body>
