fix(area-maker): 修复插件名称错误

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <a href="/dnalogel/src/Object3DHelperPlugin/index.html">Object3DHelperPlugin：模型操作插件</a>
       </li>
       <li><a href="/dnalogel/src/PipelinePlugin/index.html">PaintBrush：管道模型组件</a></li>
-      <li><a href="/dnalogel/src/AreaMakerPlugin/index.html">AreaMakerPluginPlugin: 区域标注插件</a></li>
+      <li><a href="/dnalogel/src/AreaMakerPlugin/index.html">AreaMakerPlugin: 区域标注插件</a></li>
       <!-- 此功能仅做工具使用，不对外支持维护 -->
       <!-- <li><a href="/dnalogel/src/PanoCursorRaycasterPlugin/index.html">PanoCursorRaycasterPlugin：全景态选点插件</a></li> -->
     </ul>
