--- a/src/PanoTagPlugin/index.html
+++ b/src/PanoTagPlugin/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PanoTagPlugin</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PanoTagPlugin</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-
-    html,
-    body #app {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-    }
-  </style>
-  <!-- <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+      html,
+      body #app {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+      }
+    </style>
+    <!-- <script src="//vrlab-static.ljcdn.com/release/web/eruda.d6bc04b5.js"></script>
   <script>eruda.init();</script> -->
-  <script src="//vrlab-static.ljcdn.com/release/web/eruda.d6bc04b5.js"></script>
-  <script>eruda.init();</script>
-</head>
+  </head>
 
-<body>
-  <div id="app"></div>
-  <script type="module" src="./index"></script>
-</body>
-
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./index"></script>
+  </body>
 </html>
