--- a/src/MapviewFloorplanPlugin/index.html
+++ b/src/MapviewFloorplanPlugin/index.html
@@ -14,6 +14,6 @@
   <div id="app"></div>
   <script type="module" src="./index"></script>
   <script src="//vr-static.realsee-cdn.cn/release/web/eruda.d6bc04b5.js"></script>
-  <script>eruda.init();</script>
+  <!-- <script>eruda.init();</script> -->
 </body>
 </html>
