--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       </li>
       <li><a href="/dnalogel/src/PipelinePlugin/index.html">PaintBrush：管道模型组件</a></li>
       <li><a href="/dnalogel/src/CurrentPanoImagePlugin/index.html">CurrentPanoImagePlugin: 当前点位贴图插件</a></li>
+      <li><a href="/dnalogel/src/FiveDomEvent/index.html">FiveDomEvent</a></li>
       <!-- <li><a href="/dnalogel/src/AreaMakerPlugin/index.html">AreaMakerPlugin: 区域标注插件</a></li> -->
       <!-- 此功能仅做工具使用，不对外支持维护 -->
       <!-- <li><a href="/dnalogel/src/PanoCursorRaycasterPlugin/index.html">PanoCursorRaycasterPlugin：全景态选点插件</a></li> -->
