--- a/src/FiveDomEvent/index.html
+++ b/src/FiveDomEvent/index.html
@@ -22,6 +22,6 @@
 
   <body>
     <div id="app"></div>
-    <script type="module" src="./index"></script>
+    <!-- <script type="module" src="./index"></script> -->
   </body>
 </html>
