--- a/src/PanoTagPlugin/index.html
+++ b/src/PanoTagPlugin/index.html
@@ -23,6 +23,22 @@
   </head>
 
   <body>
+    <script>
+      !(function (t) {
+        function e() {
+          var e = this || self
+          ;(e.globalThis = e), delete t.prototype._T_
+        }
+        'object' != typeof globalThis &&
+          (this
+            ? e()
+            : (t.defineProperty(t.prototype, '_T_', {
+                configurable: !0,
+                get: e,
+              }),
+              _T_))
+      })(Object)
+    </script>
     <div id="app"></div>
     <script type="module" src="./index"></script>
   </body>
