--- a/src/PanoTagPlugin/index.html
+++ b/src/PanoTagPlugin/index.html
@@ -18,8 +18,10 @@
         overflow: hidden;
       }
     </style>
-    <!-- <script src="//vrlab-static.ljcdn.com/release/web/eruda.d6bc04b5.js"></script>
-  <script>eruda.init();</script> -->
+    <script src="//vrlab-static.ljcdn.com/release/web/eruda.d6bc04b5.js"></script>
+    <script>
+      eruda.init()
+    </script>
   </head>
 
   <body>
