--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
       <li><a href="/dnalogel/src/CurrentPanoImagePlugin/index.html">CurrentPanoImagePlugin: 当前点位贴图插件</a></li>
       <!-- <li><a href="/dnalogel/src/FiveDomEvent/index.html">FiveDomEvent</a></li> -->
       <li><a href="/dnalogel/src/AreaMakerPlugin/index.html">AreaMakerPlugin: 区域标注插件</a></li>
+      <li><a href="/dnalogel/src/ModelMakerPlugin/index.html">ModelMakerPlugin: 模型标注插件</a></li>
       <li><a href="/dnalogel/src/Sculpt/index.html">Sculpt</a></li>
       <!-- 此功能仅做工具使用，不对外支持维护 -->
       <!-- <li><a href="/dnalogel/src/PanoCursorRaycasterPlugin/index.html">PanoCursorRaycasterPlugin：全景态选点插件</a></li> -->
