--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <li><a href="/dnalogel/src/ModelMakerPlugin/index.html">ModelMakerPlugin: 模型标注插件</a></li>
       <li><a href="/dnalogel/src/Sculpt/index.html">Sculpt</a></li>
       <li><a href="/dnalogel/src/MovePlugin/index.html">MovePlugin: 模型态漫游插件</a></li>
+      <li><a href="/dnalogel/src/PanoVideoPlugin/index.html">PanoVideoPlugin: 全景视频插件</a></li>
       <!-- 此功能仅做工具使用，不对外支持维护 -->
       <!-- <li><a href="/dnalogel/src/PanoCursorRaycasterPlugin/index.html">PanoCursorRaycasterPlugin：全景态选点插件</a></li> -->
     </ul>
