--- a/index.html
+++ b/index.html
@@ -46,20 +46,17 @@
     <h4>其他</h4>
     <a href="/dnalogel/src/Sculpt/index.html">Sculpt</a><br />
     <a href="/dnalogel/src/Object3DHelperPlugin/index.html">Object3DHelperPlugin：模型操作插件</a><br />
-    <a href="/dnalogel/src/PaintBrush/index.html">PaintBrush：画笔组件</a>
+    <a href="/dnalogel/src/PaintBrush/index.html">PaintBrush：画笔组件</a><br />
     <a href="/dnalogel/src/CSS3DRenderPlugin/index.html">CSS3DRenderPlugin：CSS3D渲染插件</a><br />
-    <a href="/dnalogel/src/PipelinePlugin/index.html">PaintBrush：管道模型组件</a><br />
+    <a href="/dnalogel/src/PipelinePlugin/index.html">PipelinePlugin：管道模型组件</a><br />
 
     <h4>停止维护</h4>
     <a href="/dnalogel/src/CameraMovementPlugin/index.html">CameraMovementPlugin：相机运镜插件</a><br />
     <a href="/dnalogel/src/AreaMakerPlugin/index.html">AreaMakerPlugin: 区域标注插件</a><br />
     <a href="/dnalogel/src/ModelTVVideoPlugin/index.html">ModelTVVideoPlugin：模型电视插件</a><br />
-    <a href="/dnalogel/src/PanoSpatialTagPlugin/index.html">PanoSpatialTagPlugin：全景空间标签插件</a>
+    <a href="/dnalogel/src/PanoSpatialTagPlugin/index.html">PanoSpatialTagPlugin：全景空间标签插件</a><br />
     </div>
   </div>
-
-
-
       <!-- <li>
         <a href="/dnalogel/src/ModelItemLabelPlugin/index.html">ModelItemLabelPlugin：模型物品标签插件</a>
       </li> -->
