--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div style="width: 42vw; display: inline-block; vertical-align: top;">
       <h2>常用插件</h2>
       <a href="/dnalogel/src/PanoTagPlugin/index.html">PanoTagPlugin：全景标签</a><br />
+      <a href="/dnalogel/src/ModelMakerPlugin/index.html">ModelMakerPlugin: 模型标注插件</a><br />
     </div>
 
     <div style="width: 42vw; display: inline-block;">
