--- a/src/ModelMakerPlugin/index.html
+++ b/src/ModelMakerPlugin/index.html
@@ -18,7 +18,7 @@
         overflow: hidden;
       }
     </style>
-    <!-- <script src="//vrlab-static.ljcdn.com/release/web/eruda.d6bc04b5.js"></script>
+    <!-- <script src="//vr-static.realsee-cdn.cn/release/web/eruda.d6bc04b5.js"></script>
   <script>eruda.init();</script> -->
   </head>
 
