feat(FloorplanGuidePlugin): 创建新的FloorplanGuidePlugin
* 基于PanoFloorplanRadarPlugin，创建新的FloorplanGuidePlugin
* 创建对应example

ones: #60616 https://ones.realsee.com/project/#/team/8kZMQ1TP/task/TBFG57nYoZiYuQHF

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div style="width: 42vw; display: inline-block">
         <h4>户型图</h4>
         <a href="/dnalogel/src/PanoFloorplanRadarPlugin/index.html">PanoFloorplanRadarPlugin：全景户型雷达图插件</a><br />
+        <a href="/dnalogel/src/FloorplanGuidePlugin/index.html">FloorplanGuidePlugin：户型图漫游插件</a><br />
         <a href="/dnalogel/src/TopviewFloorplanPlugin/index.html">TopviewFloorplanPlugin：俯视模型户型图插件</a><br />
         <a href="/dnalogel/src/MapviewFloorplanPlugin/index.html">MapviewFloorplanPlugin：大空间户型图插件</a><br />
         <a href="/dnalogel/src/ModelFloorplanPlugin/index.html">ModelFloorplanPlugin：模型户型图插件</a><br />
